--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
                   sudo apt-get update --fix-missing
                   sudo apt-get autoremove
                   sudo apt-get autoclean
-                  sudo apt install python3.10-distutils
+                  sudo apt-get install python3-distutils
                   python -m pip install --upgrade pip
                   pip install twine poetry==1.4.2
                   poetry install
