--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
                   python -m pip install --upgrade pip
                   pip install twine poetry==1.4.2
                   poetry install
+                  poetry run python3 -m pip install --upgrade setuptools
                   poetry run autonomy packages sync --update-packages
 
             - name: Build wheels and source tarball
