--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt-get autoclean
           python -m pip install --upgrade pip
           pip install twine poetry==1.4.2
-          poetry env use 3.10
+          poetry env use python3.10
           poetry install
           poetry run pip install --upgrade setuptools
           poetry run autonomy packages sync --update-packages
