--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
           sudo apt-get update --fix-missing
           sudo apt-get autoremove
           sudo apt-get autoclean
+          sudo apt-get install python3.10
           python -m pip install --upgrade pip
           pip install twine poetry==1.4.2
           poetry env use python3.10
